# Random-Reference

./: CMakeLists.txt  Privacy Policy.txt  README.md  Reference Picker.py  imageutils.cpp  imageutils.h  main.cpp  mainwindow.cpp  mainwindow.h  refPC.cpp  reference picker REFRACTORED.cpp  reference picker REFRACTORED.h  scheduledialog.cpp  scheduledialog.h  settingsdialog.cpp  settingsdialog.h  zoomablegraphicsview.cpp  zoomablegraphicsview.h
